# blog_backend

./: Cargo.toml  Rocket.toml  setup-service.sh
.github/workflows/: build-and-deploy.yml
migrations/2023-11-16-123116_create_image_tables/: down.sql  up.sql
migrations/2023-11-18-193740_create_api_tokens_table/: up.sql
migrations/2023-12-16-012715_create_site_storage_table/: down.sql  up.sql
migrations/2023-12-16-023506_create_site_content_tables/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schedule_jobs.rs  schema.rs  utils.rs
src/misc/: enums.rs
src/models/: content.rs  image.rs  mod.rs  storage.rs
src/routes/: auth.rs  authors.rs  images.rs  mod.rs  novels.rs  storage.rs
src/routes/storage/: content.rs  image.rs  mod.rs
