[package]
name = "blog_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.1.0"
r2d2 = "0.8.10"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }

[profile.release]
strip = true
lto = true
