[package]
name = "blog_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aws-config = "1.0.0"
aws-sdk-s3 = "0.39.0"
aws-smithy-runtime-api = "1.0.1"
bb8 = "0.8.1"
bb8-diesel = "0.2.1"
chrono = "0.4.31"
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "bb8"] }
diesel-order-with-direction = "0.2.2"
dotenvy = "0.15.7"
itertools = "0.12.0"
jsonwebtoken = "9.1.0"
md5 = "0.7.0"
r2d2 = "0.8.10"
regex = "1.10.2"
reqwest = { version = "0.11.22", features = ["json", "gzip", "brotli"] }
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4", "fast-rng"] }

[profile.release]
strip = true
lto = true
